Add login on GO
