# backend_go/api/api_utils/response.go
@@ -1,36 +1,41 @@
 package api_utils
 
 import (
-    "github.com/gin-gonic/gin"
+	"github.com/gin-gonic/gin"
 )
 
-
 type SuccessData struct {
-  Id  int `json:"id"`
-  Description  string `json:"description"`
+	Id          int    `json:"id"`
+	Description string `json:"description"`
 }
 
 type ErrorData struct {
-  Code  string `json:"code"`
-  Description  string `json:"description"`
+	Code        string `json:"code"`
+	Description string `json:"description"`
 }
 
 type SuccessResponse struct {
-  Status string `json:"status"`
-  Data SuccessData `json:"data"`
+	Status string      `json:"status"`
+	Data   SuccessData `json:"data"`
 }
 
 type ErrorResponse struct {
-  Status string `json:"status"`
-  Error ErrorData `json:"error"`
+	Status string    `json:"status"`
+	Error  ErrorData `json:"error"`
 }
 
 func SendApiSuccess(c *gin.Context, status int, response SuccessResponse) {
-    response.Status = "ok"
-    c.IndentedJSON(status, response)
+	response.Status = "ok"
+	c.IndentedJSON(status, response)
 }
 
-func SendApiError(c *gin.Context, status int, response ErrorResponse) {
-    response.Status = "error"
-    c.IndentedJSON(status, response)
+func SendApiError(c *gin.Context, status int, code string, desctiption string) {
+	var response = ErrorResponse{
+		Status: "error",
+		Error: ErrorData{
+			Description: desctiption,
+			Code:        code,
+		},
+	}
+	c.IndentedJSON(status, response)
 }
